<resources>
    <string name="app_name">homeWork_6_2m</string>
    <string name="najmiteSuda">Нажмите сюда</string>
    <string name="password">Забыли пароль?</string>
    <string name="voyti">Войти</string>
    <string name="password2">Введите пароль</string>
    <string name="mail">Введите вашу почту</string>
    <string name="reg">или зарегистрируйтесь</string>
    <string name="vhod">Выполните вход</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="vhod2">Вход</string>
</resources>